--- a/biz-application/src/main/resources/bootstrap.yml
+++ b/biz-application/src/main/resources/bootstrap.yml
@@ -15,7 +15,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8001/eureka/
+      defaultZone: http://discovery-server:8001/eureka/
     registryFetchIntervalSeconds: 1
   instance:
     leaseRenewalIntervalInSeconds: 1
