--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -4,13 +4,13 @@ spring:
   application.name: config-server
   cloud.config:
     server.git:
-      uri: https://github.com/alejandro-du/vaadin-microservices-demo-config.git
+      uri: https://github.com/dobrosi/vaadin-microservices-demo-config.git
       default-label: master
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8001/eureka/
+      defaultZone: http://discovery-server:8001/eureka/
     registryFetchIntervalSeconds: 1
   instance:
     leaseRenewalIntervalInSeconds: 1
