--- a/discovery-server/src/main/resources/bootstrap.yml
+++ b/discovery-server/src/main/resources/bootstrap.yml
@@ -8,4 +8,4 @@ eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
-    service-url.defaultZone: http://localhost:${server.port}/eureka
+    service-url.defaultZone: http://discovery-server:${server.port}/eureka
