--- a/website-application/src/main/resources/bootstrap-development.yml
+++ b/website-application/src/main/resources/bootstrap-development.yml
@@ -10,6 +10,6 @@ eureka.client:
 
 hazelcast.max.no.heartbeat.seconds: 60
 
-admin-application.url: http://localhost:9101/ui/
+admin-application.url: http://admin-application:9101/ui/
 
-news-application.url: http://localhost:9201/ui/
+news-application.url: http://news-application:9201/ui/
