--- a/docker/spring-app/Dockerfile
+++ b/docker/spring-app/Dockerfile
@@ -1,5 +1,10 @@
 FROM timbru31/java-node
 RUN apt update && apt upgrade -y
+RUN apt install -y git maven
+RUN git clone https://github.com/dobrosi/vaadin-microservices-demo.git
+RUN cd /vaadin-microservices-demo
+WORKDIR /vaadin-microservices-demo
+RUN mvn --quiet package -Pproduction
 COPY discovery-server/target/*SNAPSHOT.jar /discovery-server.jar
 COPY config-server/target/*SNAPSHOT.jar /config-server.jar
 COPY biz-application/target/*SNAPSHOT.jar /biz-application.jar
